--- a/web/src/assets/style.css
+++ b/web/src/assets/style.css
@@ -87,3 +87,15 @@ label {
     cursor: pointer;
     box-shadow: 0px 0px 10px 2px black
 }
+
+.text-danger {
+    color: #8a0404;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.text-sm {
+    font-size: 14px;
+}
