Cretae views for subjects and classrooms

--- a/views/default/index.html
+++ b/views/default/index.html
@@ -9,10 +9,11 @@
         Welcome to Students Panel
     </h2>
     <p>
-        Here you will
+        Here you will can
         <a href="{{=URL('students', 'index')}}" class="link">add students</a>,
-        <a href="{{=URL('attendance', 'index')}}" class="link">check attendance</a> and register
-        <a href="{{=URL('classrooms', 'index')}}" class="link">classrooms and subjects</a>
+        <a href="{{=URL('attendance', 'index')}}" class="link">check attendance</a>, and edit
+        <a href="{{=URL('classrooms', 'index')}}" class="link">classrooms</a> or
+        <a href="{{=URL('subjects', 'index')}}" class="link">subjects</a>
     </p>
 </section>
 
