--- a/views/students/index.html
+++ b/views/students/index.html
@@ -1,6 +1,7 @@
 {{ extend 'layout.html' }}
 
 {{ block head }}
+<link rel="stylesheet" href="{{=URL('static', 'css/students-form.css')}}">
 <title>Register students</title>
 {{ end head }}
 
