--- a/views/students/index.html
+++ b/views/students/index.html
@@ -12,6 +12,7 @@
 
 {{ block paje_js }}
 <script type="module" src="{{=URL('static', 'dist/form/index.js')}}"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 {{ end paje_js }}
 
 <style>
