Directory architerture improve: separation of responsabilities between models and Database layer

--- a/views/students/index.html
+++ b/views/students/index.html
@@ -11,7 +11,7 @@
 </div>
 
 {{ block paje_js }}
-<script type="module" src="{{=URL('static', 'dist/form/index.js')}}"></script>
+<script type="module" src="{{=URL('static', 'dist/index.js')}}"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 {{ end paje_js }}
 
