--- a/views/subjects/index.html
+++ b/views/subjects/index.html
@@ -6,7 +6,7 @@
 {{ end head }}
 
 <section class="grid-section">
-    <h1 class="grid-title">Manage classrooms</h1>
+    <h1 class="grid-title">Manage subjects</h1>
     <div class="grid-container">
         {{=grid}}
     </div>
