Add relationship Between students and classrooms

--- a/views/layout.html
+++ b/views/layout.html
@@ -51,6 +51,9 @@
             <a class="menu-item__link" href="{{=URL('students', 'index')}}">Register student</a>
           </li>
           <li class="menu-item">
+            <a class="menu-item__link" href="{{=URL('students', 'edit_student')}}">Manage students</a>
+          </li>
+          <li class="menu-item">
             <a class="menu-item__link" href="{{=URL('attendance', 'index')}}">Attendance</a>
           </li>
           <li class="menu-item">    
