--- a/views/students/edit_student.html
+++ b/views/students/edit_student.html
@@ -7,6 +7,7 @@
 
 <section class="grid-section">
     <h1 class="grid-title">Manage students</h1>
+    <p>Edit students and assign a classroom to them</p>
     <div class="grid-container">
         {{=grid}}
     </div>
