--- a/views/students/edit_student.html
+++ b/views/students/edit_student.html
@@ -6,9 +6,11 @@
 {{ end head }}
 
 <section class="grid-section">
-    <h1 class="grid-title">Manage students</h1>
-    <p>Edit students and assign a classroom to them</p>
     <div class="grid-container">
+        <div>
+            <h1 class="grid-title">Manage students</h1>
+            <p>Edit students and assign a classroom to them</p>
+        </div>
         {{=grid}}
     </div>
 </section>
