--- a/static/css/grid.css
+++ b/static/css/grid.css
@@ -15,6 +15,7 @@
     width: 80%;
     height: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     margin-top: -200px;
