--- a/static/css/tables.css
+++ b/static/css/tables.css
@@ -1,6 +1,5 @@
 .tables-section {
     margin: 0 auto;
-    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -9,15 +8,16 @@
 
 .tables-title {
     z-index: 999;
+    margin: 50px 0;
 }
 
 .tables-container {
     width: 80%;
-    height: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: -200px;
+    margin-top: 30px;
 }
 
 .classrooms-container {
